# pygl2d

./: CMakeLists.txt  README.md  build.sh  test.c  test.py
python/: pygl2d.py
src/: library.c  library.h
